# OctoCam

./: .gitignore  CHANGELOG.md  README.md  install.sh
docs/: matter.md
docs/superpowers/plans/: 2026-07-02-matter-chip-fork.md  2026-07-02-matter-control-plane.md  2026-07-02-octocam-web-nonblocking-subprocess.md  2026-07-02-stream-viewers-and-limits.md  2026-07-03-ssh-key-management.md  2026-07-05-config-backup-restore.md  2026-07-08-hksv-recording.md
docs/superpowers/specs/: 2026-07-02-matter-camera-design.md  2026-07-02-stream-viewers-and-limits-design.md  (+2 more)
homekit/: octocam-homekit.js  package-lock.json  package.json
nginx/: octocam-web.conf
octocam/: __init__.py  app.py  camera.py  security.py  settings.py  system.py  wifi.py
rust/octocam-web/: Cargo.toml
rust/octocam-web/src/: backup.rs  camera.rs  main.rs  matter.rs  mediamtx.rs  motion.rs  proc.rs  security.rs  settings.rs  ssh_keys.rs  streams.rs  system.rs  wifi.rs  wifi_setup.rs
rust/octocam-web/templates/: _settings_toast.html  _sidebar.html  _topbar.html  admin.html  advanced.html  homekit.html  identity.html  index.html  login.html  logs.html  matter.html  rtsp.html  setup.html  ssh_keys.html  stream.html  stream_settings.html  system.html  terminal.html  wifi.html
scripts/: build-pi-web.sh  deploy-pi-web.sh  minimize-os.sh  octocam-wifi-setup.sh
static/: app.js  styles.css  sw.js
systemd/: octocam-homekit.service  octocam-matter.service  octocam-web.service  octocam-wifi-setup.service
templates/: _sidebar.html  advanced.html  index.html  login.html  setup.html  stream.html
