[package]
name = "octocam-web"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
axum = { version = "0.8", features = ["form", "json", "macros"] }
base64 = "0.22"
constant_time_eq = "0.3"
hmac = "0.12"
http = "1"
pbkdf2 = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
